App simplification, restructuring and rebranding
npm remove web-vitals --save

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,19 @@
 # production
 /build
 
+# IDE configurations
+.vscode
+.idea/
+
+# OSX
+.DS_Store
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
 # misc
 .DS_Store
 .env.local
