--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "plotly.js-basic-dist": "^1.58.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1"
   },
   "scripts": {
